This release will be a major step forward for Satchmo. It includes a newly designed project 
layout meant to make it more modular and easier to integrate with the rest of your Django apps. 
This release also includes many bug fixes, improvements, new features and improved documentation. 
Some of the highlights are described below.

Changes
-------
	
 * New US SST tax module
 * New Tiered weight shipping module
 * Google checkout v2 integration
 * New feature - satchmo toolbar which displays store info to the admins
 * Added a new form_init signal - useful for collecting additional information at checkout
 * Added a new object "OrderPaymentFailure" to track failures in the various payment processors
 * New capability to enable and disable entire categories
 * Added Canada Post shipping module
 * Improved project layout to support easier integration with other Django apps
 * Removed hard-coding of organizations types, organization roles and contact types from the contact app
 * Added AUTH_EARLY option to Authorize.net
 * Upgrade of Authorize.net SSL version to use ssle 3.0/tls
 * Use sorl_thumbnail
 * Allow products with the same slug to be on multiple sites
 * Align the logout process with the Django conventions - allowing easier redirection
 * Multiple improvements and fixes with discount code application
 * Improvement to the installation process to make it simpler
 * Fully compatible with Django 1.1
 * Migrated to using Mercurial for version control
 * Addition of new currency display in the Admin. Improved rounding support throughout
 * Python 2.6 compatibility changes
 * Improved several Ajax functions to be more consistent
 * Addition of new SSL_PORT setting
 * Improvements to the SSL Middleware to support more hosting setups
 * Allow discount to be entered on first page of checkout and include free shipping
 * Multiple improvements and cleanups in the templates to make inheritance easier
 * Added improved jquery autocomplete code to the admin